pt-ui-mods (1.3.20210301) buster; urgency=medium

  * Fix Python SDK docs exec command

 -- Mike Roberts <mike@pi-top.com>  Mon, 01 Mar 2021 11:24:54 +0000

pt-ui-mods (1.3.20210211) buster; urgency=medium

  * Add touche custom desktop file

 -- Mike Roberts <mike@pi-top.com>  Thu, 11 Feb 2021 12:40:15 +0000

pt-ui-mods (1.3.20210112) buster; urgency=medium

  * Remove pt-touchegg

 -- Jorge Capona <jorge@pi-top.com>  Tue, 12 Jan 2021 15:51:41 -0300

pt-ui-mods (1.3.20210105) buster; urgency=medium

  * rpi port: Remove 60-desktop-policy.conf in favour of
    policykit-1's 51-debian-sudo.conf

 -- Mike Roberts <mike@pi-top.com>  Tue, 05 Jan 2021 13:44:53 +0000

pt-ui-mods (1.3.20201231) buster; urgency=medium

  * Update CLI call from 'help' to 'support'

 -- Jorge Capona <jorge@pi-top.com>  Wed, 30 Dec 2020 17:22:38 -0300

pt-ui-mods (1.3.20201230) buster; urgency=medium

  * Fix postinstall to apply changes to openbox configuration file

 -- Jorge Capona <jorge@pi-top.com>  Wed, 30 Dec 2020 09:25:03 -0300

pt-ui-mods (1.3.20201229) buster; urgency=medium

  * Add custom openbox configuration to use on onboarding

 -- Jorge Capona <jorge@pi-top.com>  Tue, 29 Dec 2020 16:15:17 -0300

pt-ui-mods (1.3.20201115) buster; urgency=medium

  * 'lxplug-volume' --> 'lxplug-volumepulse'
  * 'pi-top Forums' --> 'pi-top Forum'
  * Re-order applications in start menu
  * Remove Node-RED from applications

 -- Mike Roberts <mike@pi-top.com>  Tue, 15 Dec 2020 12:35:15 +0000

pt-ui-mods (1.3.20201114) buster; urgency=medium

  * Rename "pi-top Help" to "pi-top Knowledge Base"
  * Add link to forums

 -- Mike Roberts <mike@pi-top.com>  Mon, 14 Dec 2020 16:32:48 +0000

pt-ui-mods (1.2.20201114) buster; urgency=medium

  * Remove unused override

 -- Mike Roberts <mike@pi-top.com>  Mon, 14 Dec 2020 16:01:19 +0000

pt-ui-mods (1.1.20201114) buster; urgency=medium

  * Add Barrier desktop file

 -- Mike Roberts <mike@pi-top.com>  Mon, 14 Dec 2020 15:57:43 +0000
