@@ -3,9 +3,9 @@
 %:
 	dh $@
 
-override_dh_shlibdeps:
-	true
+# override_dh_shlibdeps:
+# 	true
 
-override_dh_dwz:
-# 	dwz: debian/pt-ui-mods/usr/bin/raspi2png: .debug_info section not present
-	dwz -q -- debian/pt-ui-mods/usr/bin/raspi2png || echo "Skipping dh_dwz"
+# override_dh_dwz:
+# # 	dwz: debian/pt-ui-mods/usr/bin/raspi2png: .debug_info section not present
+# 	dwz -q -- debian/pt-ui-mods/usr/bin/raspi2png || echo "Skipping dh_dwz"
