@@ -1,6 +1,7 @@
 pt-ui-mods (1.3.20210301) buster; urgency=medium
 
   * Fix Python SDK docs exec command
+  * Build raspi2png from source
 
  -- Mike Roberts <mike@pi-top.com>  Mon, 01 Mar 2021 11:24:54 +0000
 
